--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>管理系统-首页</title>
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="lib/nprogress/nprogress.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
+
 <body>
-    <h1>hello</h1>
+    <div class="le_aside">
+        <div class="brand">
+            <a href="index.html">黑马23期</a>
+        </div>
+        <div class="userInfo">
+            <img src="./images/default.jpg" alt="">
+            <p>超级管理员</p>
+        </div>
+        <div class="nav">
+            <ul>
+                <li>
+                    <a href="./user.html">
+                        <span class="glyphicon glyphicon-user"></span>
+                        <span>用户管理</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="javescript:;">
+                        <span class="glyphicon glyphicon-list"></span>
+                        <span>分类管理</span>
+                    </a>
+                    <div class="subnav" style="display:none;">
+                        <a href="first.html">一级分类</a>
+                        <a href="second.html">二级分类</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="./product.html">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span>商品管理</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="le_main">
+        <div class="header clearfix">
+            <a href="javascript:;" class="pull-left icon_menu">
+                <span class="glyphicon glyphicon-align-justify"></span>
+            </a>
+            <a href="javascript:;" class="pull-right icon_logout">
+                <span class="glyphicon glyphicon-log-out"></span>
+            </a>
+        </div>
+        <div class="container-fluid">
+            <!-- 面包屑导航 -->
+            <ol class="breadcrumb">
+                <li>
+                    <a href="javascript:;">管理系统</a>
+                </li>
+                <li class="active">首页</li>
+            </ol>
+            <div class="le_main_content">
+
+            </div>
+        </div>
+    </div>
+    <!-- 弹出模态框 -->
+    <!-- Small modal -->
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body text-danger">
+                    <span class="glyphicon glyphicon-info-sign"></span>
+                    <span>您确定要退出后台管理系统吗?</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_logout">退出</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+    <script src="./lib/jquery/jquery.min.js"></script>
+    <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="./lib/nprogress/nprogress.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/login.js"></script>
 </body>
+
 </html>
