PC子页面初始化完成

--- a/public/admin/user.html
+++ b/public/admin/user.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>管理系统-首页</title>
+    <title>管理系统-用户管理</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
@@ -23,7 +24,7 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a href="./user.html">
+                    <a class="active" href="./user.html">
                         <span class="glyphicon glyphicon-user"></span>
                         <span>用户管理</span>
                     </a>
@@ -63,11 +64,10 @@
                 <li>
                     <a href="javascript:;">管理系统</a>
                 </li>
-                <li class="active">首页</li>
+                <li class="active">用户管理</li>
             </ol>
-            <div class="le_main_content clearfix">
-                <div class="echart_left pull-left">22</div>
-                <div class="echart_right pull-right">33</div>
+            <div class="le_main_content">
+
             </div>
         </div>
     </div>
@@ -96,14 +96,12 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.common.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
-    <script src="./js/index.js"></script>
 </body>
+
 </html>
