--- a/public/admin/first.html
+++ b/public/admin/first.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>管理系统-首页</title>
+    <title>管理系统-一级分类</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
@@ -33,8 +34,8 @@
                         <span class="glyphicon glyphicon-list"></span>
                         <span>分类管理</span>
                     </a>
-                    <div class="subnav" style="display:none;">
-                        <a href="first.html">一级分类</a>
+                    <div class="subnav" style="display:block;">
+                        <a class="active" href="first.html">一级分类</a>
                         <a href="second.html">二级分类</a>
                     </div>
                 </li>
@@ -63,11 +64,10 @@
                 <li>
                     <a href="javascript:;">管理系统</a>
                 </li>
-                <li class="active">首页</li>
+                <li class="active">一级分类</li>
             </ol>
-            <div class="le_main_content clearfix">
-                <div class="echart_left pull-left">22</div>
-                <div class="echart_right pull-right">33</div>
+            <div class="le_main_content">
+
             </div>
         </div>
     </div>
@@ -96,14 +96,12 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.common.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
-    <script src="./js/index.js"></script>
 </body>
+
 </html>
