用户管理页面完成

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -73,7 +73,7 @@
     </div>
     <!-- 弹出模态框 -->
     <!-- Small modal -->
-    <div class="modal fade" id="myModal">
+    <div class="modal fade" tabindex="-1" id="myModal">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
