--- a/public/admin/user.html
+++ b/public/admin/user.html
@@ -67,7 +67,25 @@
                 <li class="active">用户管理</li>
             </ol>
             <div class="le_main_content">
-
+                <!-- 表格信息 -->
+                <table class="text-center table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td width="10%">序号</td>
+                            <td width="30%">用户名</td>
+                            <td width="30%">手机号</td>
+                            <td width="20%">状态</td>
+                            <td width="10%">操作</td>
+                        </tr>
+                    </thead>
+                    <tbody class="table-striped">
+                      <!-- 模板 -->
+                    </tbody>
+                </table>
+                <!-- 分页器 -->
+                <div class="user_page text-right">
+                    <ul id="paginator"></ul>
+                </div>
             </div>
         </div>
     </div>
@@ -96,12 +114,53 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
+    <!-- 禁用或开启模态框 -->
+    <div class="modal fade" id="userModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body text-danger">
+                    <span class="glyphicon glyphicon-info-sign"></span>
+                    <span>您确定要执行该操作吗?</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_confirm">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/user.js"></script>
+    <script type="text/html" id="tpl">
+    {{each rows v i}}
+        <tr>
+            <td>{{(page-1)*size+i+1}}</td>
+            <td>{{v.username}}</td>
+            <td>{{v.mobile}}</td>
+            <td>{{v.isDelete == 1 ? '正常':'禁用'}}</td>
+            <td data-id="{{v.id}}">
+                {{if v.isDelete == 0 }}
+                <button class="btn btn-danger btn-sm">禁用</button>
+                {{else}}
+                <button class="btn btn-success btn-sm">开启</button>
+                {{/if}}
+            </td>
+        </tr>
+    {{/each}}
+    </script>
 </body>
 
 </html>
