--- a/public/admin/first.html
+++ b/public/admin/first.html
@@ -62,12 +62,31 @@
             <!-- 面包屑导航 -->
             <ol class="breadcrumb">
                 <li>
-                    <a href="javascript:;">管理系统</a>
+                    <a href="#">管理系统</a>
+                </li>
+                <li>
+                    <a href="#">分类管理</a>
                 </li>
                 <li class="active">一级分类</li>
             </ol>
+            <button class="btn btn-default btn-add">添加分类</button>
             <div class="le_main_content">
-
+                <!-- 表格信息 -->
+                <table class="text-center table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td width="20%">序号</td>
+                            <td width="80%">分类名称</td>
+                        </tr>
+                    </thead>
+                    <tbody class="table-striped">
+                        <!-- 模板 -->
+                    </tbody>
+                </table>
+                <!-- 分页器 -->
+                <div class="user_page text-right">
+                    <ul id="paginator"></ul>
+                </div>
             </div>
         </div>
     </div>
@@ -95,13 +114,49 @@
         </div>
         <!-- /.modal-dialog -->
     </div>
-    <!-- /.modal -->
+    <!-- 添加分类 -->
+    <div class="modal fade" id="addModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="categoryName" placeholder="请输入一级分类名称">
+                        </div>
+                        <div class="modal-footer" style="padding-right:0;">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="submit" class="btn btn-primary btn_addCategroy pull-right">添加</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/first.js"></script>
+    <script type="text/html" id="tpl">
+        {{each rows v i}}
+        <tr>
+            <td>{{(page-1)*size+i+1}}</td>
+            <td>{{v.categoryName}}</td>
+        </tr>
+        {{/each}}
+    </script>
 </body>
 
 </html>
