--- a/public/admin/product.html
+++ b/public/admin/product.html
@@ -66,8 +66,29 @@
                 </li>
                 <li class="active">商品管理</li>
             </ol>
+            <button class=" btn btn-default btn-add">添加商品</button>
             <div class="le_main_content">
-
+                <!-- 表格信息 -->
+                <table class="text-center table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td width="10%">序号</td>
+                            <td width="25%">商品名称</td>
+                            <td width="25%">商品描述</td>
+                            <td width="10%">商品库存</td>
+                            <td width="10%">商品尺寸</td>
+                            <td width="10%">商品状态</td>
+                            <td width="10%">操作</td>
+                        </tr>
+                    </thead>
+                    <tbody class="table-striped">
+                        <!-- 模板 -->
+                    </tbody>
+                </table>
+                <!-- 分页器 -->
+                <div class="user_page text-right">
+                    <ul id="paginator"></ul>
+                </div>
             </div>
         </div>
     </div>
@@ -96,12 +117,103 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
+    <!-- 添加商品-->
+    <div class="modal fade" id="addModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">添加商品</h4>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                                    <span class="dropdown-text">请选择二级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <input type="hidden" name="brandId">
+                                <input type="hidden" name="statu" value="1">
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <!-- 挖个坑 -->
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="proName" placeholder="请输入商品的名称">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" name="proDesc" placeholder="请输入商品的描述" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="num" placeholder="请输入商品的库存">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="size" placeholder="请输入商品的尺码(32-46)">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="oldPrice" placeholder="请输入商品的原价">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="price" placeholder="请输入商品的价格">
+                        </div>
+                        <div class="form-group">
+                            <label for="fileupload" class="btn btn-default">上传图片</label>
+                            <input id="fileupload" type="file" name="pic1" data-url="/product/addProductPic" multiple style="display:none;">
+                        </div>
+                        <div class="form-group">
+                            <div class="img_box">
+                                <!-- <img class="logo_img" src="./images/none.png" width="100px" height="100px" alt=""> -->
+                            </div>
+                            <input type="hidden" name="brandLogo">
+                        </div>
+                        <div class="modal-footer" style="padding-right:0;">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="submit" class="btn btn-primary  pull-right">添加</button>
+                        </div>
+
+                    </div>
+                </form>
+
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
     <script src="./lib/jquery/jquery.min.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/product.js"></script>
+    <script type="text/html" id="tpl">
+        {{each rows v i}}
+        <tr>
+            <td>{{(page-1)*size+i+1}}</td>
+            <td>{{v.proName}}</td>
+            <td>{{v.proDesc}}</td>
+            <td>{{v.num}}</td>
+            <td>{{v.size}}</td>
+            <td>{{v.statu==1?'已上架':'已下架'}}</td>
+            <td>
+                <button class="btn btn-danger btn-sm">下架</button>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script type="text/html" id="tpl2">
+        {{each rows v i}}
+        <li><a data-id="{{v.id}}" href="javascript:;">{{v.brandName}}</a></li>
+        {{/each}}
+    </script>
 </body>
 
 </html>
