移动端分类页面完成

--- a/public/m/index.html
+++ b/public/m/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -163,13 +162,13 @@
     <div class="lt_footer">
       <ul class="mui-clearfix">
         <li>
-          <a class="active" href="#">
+          <a class="active" href="index.html">
             <span class="fa fa-home"></span>
             <p>首页</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="category.html">
             <span class="fa fa-bars"></span>
             <p>分类</p>
           </a>
